# OpenGLCM

./: CMakeLists.txt
includes/glad/: glad.c  glad.h
resources/shaders/: cubes.frag  cubes.vert
src/: Main.cpp
src/mesh/: BaseMesh.cpp  BaseMesh.h  TriangleMesh.cpp  TriangleMesh.h
src/renderer/: Engine.cpp  Engine.h  Shader.cpp  Shader.h
